[package]
name = "raspi-os"
version = "0.6.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
# Optional
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "8.x.x" }
